@startuml

    class ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes {
        + AgenciaDeViajes()
        + catalogoDePaquetes()
    }

    class ar.edu.unahur.obj2.ejercicio1.Paquetes.PaqueteCuyo {
        + getNombre()
        + imprimirItinerario()
        - print()
        # getTransporteIda()
        # getDia1()
        # getDia2()
        # getDia3()
        # getTransporteVuelta()
    }

    class ar.edu.unahur.obj2.ejercicio1.Paquetes.PaqueteNOA {
        + itinerario()
        - nombre()
        # transporteIda()
        # dia1()
        # dia2()
        # dia3()
        # transporteVuelta()
        - print()
    }

    class ar.edu.unahur.obj2.ejercicio1.Paquetes.PaquetePatagonia {
        + getItinerario()
        - print()
    }

  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.Paquetes.PaqueteCuyo : paqueteCuyo
  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.Paquetes.PaqueteNOA : paqueteNOA
  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.Paquetes.PaquetePatagonia : paquetePatagonia

@enduml
